Refactored, speedups and fixed Llama2 Rope bug