@@ -14,8 +14,6 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.7</maven.compiler.source>
-    <maven.compiler.target>1.7</maven.compiler.target>
   </properties>
 
   <dependencies>
@@ -109,7 +107,6 @@
             <forkCount>1</forkCount>
             <argLine>
               --add-modules=jdk.incubator.vector
-              --illegal-access=permit
               --enable-preview
             </argLine>
           </configuration>
@@ -137,15 +134,5 @@
         </plugin>
       </plugins>
     </pluginManagement>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-          <source>20</source>
-          <target>20</target>
-        </configuration>
-      </plugin>
-    </plugins>
   </build>
 </project>
